@@ -23,6 +23,7 @@
 - P4A_DB::query() method was added
 - P4A_Mask error management was ported to exceptions
 - p4a/libraries/standard.php was renamed p4a/functions.php
+- P4A_DB_Select class was removed 'cause unused
 
 2.99.2
 - P4A_Mask::main() method is now called also within an AJAX call, if a full redesign is required
